# irods_microservice_plugins_curl

./: CMakeLists.txt  LICENSE  Makefile  README.md  VERSION  irods_consortium_continuous_integration_build_hook.py  irods_consortium_continuous_integration_test_hook.py
microservices/core/: Makefile
microservices/core/include/: irods_ms_plugin_curl.hpp
microservices/core/src/: irods_ms_plugin_curl.cpp
microservices/msiCurlDelete/: Makefile  libmsiCurlDelete.cpp
microservices/msiCurlGetObj/: Makefile  libmsiCurlGetObj.cpp
microservices/msiCurlGetStr/: Makefile  libmsiCurlGetStr.cpp
microservices/msiCurlPost/: Makefile  libmsiCurlPost.cpp
microservices/msiCurlPut/: Makefile  libmsiCurlPut.cpp
packaging/: build.sh  find_os.sh  find_os_version.sh  irods_microservice_plugins_curl.list.template  postinst  test_irods_microservice_plugins_curl.py  test_irods_ms_plugin_curl.py
rules/: curlDelete.r  curlGetObj.r  curlGetStr.r  curlPost.r  curlPut.r
